Fixed profile pictures misaligned in profile banner

--- a/main.css
+++ b/main.css
@@ -722,12 +722,6 @@ svg.slider-32CRPX svg, .bd-switch-slider>svg {
   top: 80px;
   left: 79px;
 }
-.avatarPositionPremium-1zPBq9, .avatarUploader-2UF9NL, .avatar-3mTjvZ {
-  top: 16px;
-}
-.avatar-3QF_VA {
-  top: -156px;
-}
 .headerTop-3GPUSF {
   display: flex;
   justify-content: space-between;
